docs: compact object headers jep519